css fix for home header in Tibetan on mobile (#873)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -213,7 +213,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    line-height: 53px;margin-top:0; margin-bottom:14px;text-align: left;;
 }
 
-.SearchPane #logo h1[lang="bo"] {  font-size:61px; margin-bottom:32px; font-weight:500; }
+.SearchPane #logo h1[lang="bo"] {  font-size:61px; margin-bottom:32px; font-weight:500; line-height: 105px; }
 
 .SearchPane #logo h1 + div {
    font-weight:500;
@@ -227,6 +227,10 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    font-weight: 400;
    text-align: left;
    /* letter-spacing: 0.31px; */
+}
+
+.SearchPane #logo h1[lang="bo"]~span {
+   line-height:200%;
 }
 
 .infoPanel {
